deploy/blog/np/blog-istio.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-istiod
  namespace: blog
spec:
  podSelector: {}
  policyTypes:
  - Egress
#  - Ingress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: istio-system
    ports:
    - port: 15012
#    - protocol: TCP
#      port: 53
#    - protocol: UDP
#      port: 53
